force-app/main/default/objects/ICV_Commitment_LE_Detail__c/ICV_Commitment_LE_Detail__c.object-meta.xml
<CustomObject>
    <label>ICV Commitment LE Detail</label>
    <nameField>
        <displayFormat>LED-{00000000}</displayFormat>
        <label>ICV Commitment LE Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICV Commitment LE Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>