force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/Approved_DLL_Direct_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Approved_DLL_Direct_Exposure__c</fullName>
    <label>Approved DLL Direct Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>