force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/DLL_Direct_Appr_Exposure_EUR__c.field-meta.xml
<CustomField>
    <fullName>DLL_Direct_Appr_Exposure_EUR__c</fullName>
    <label>DLL Direct Appr Exposure (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>