force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/ICV_Commitment_LE__c.field-meta.xml
<CustomField>
    <fullName>ICV_Commitment_LE__c</fullName>
    <label>ICV Commitment LE</label>
    <referenceTo>ICV_Commitment_LE__c</referenceTo>
    <relationshipLabel>ICV Commitment LE Detail</relationshipLabel>
    <relationshipName>ICV_Commitment_LE_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>