force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/LE_Id__c.field-meta.xml
<CustomField>
    <fullName>LE_Id__c</fullName>
    <label>LE Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>