force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/Legal_Entity_Link__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Link__c</fullName>
    <label>Legal Entity Link</label>
    <type>Url</type>
</CustomField>