force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/Party_Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Party_Role_Description__c</fullName>
    <label>Party Role Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>