force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/Party_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Role_Name__c</fullName>
    <label>Party Role Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>