force-app/main/default/objects/ICV_Commitment_LE_Detail__c/fields/Rating_History_Link__c.field-meta.xml
<CustomField>
    <fullName>Rating_History_Link__c</fullName>
    <label>Rating History Link</label>
    <type>Url</type>
</CustomField>